--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,21 +15,24 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".Login.SignInActivity"-->
-<!--            android:exported="false">-->
-<!--        </activity>-->
-
-<!--        <activity-->
-<!--            android:name=".Login.LoginActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-
-<!--        </activity>-->
+        <activity
+            android:name=".Login.KakaoAddressWebView"
+            android:exported="false" />
+        <activity
+            android:name=".Login.SignInAddressActivity"
+            android:exported="false" />
+         <activity
+         android:name=".Login.SignInActivity"
+         android:exported="false">
+         </activity>
+         <activity
+         android:name=".Login.LoginActivity"
+         android:exported="true">
+         <intent-filter>
+         <action android:name="android.intent.action.MAIN" />
+         <category android:name="android.intent.category.LAUNCHER" />
+         </intent-filter>
+         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
