--- a/spring/src/main/resources/application.properties
+++ b/spring/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.devtools.livereload.enabled = true
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+
+file.img.location="src/main/resources/static/image"
